--- a/v2/css/common.css
+++ b/v2/css/common.css
@@ -18,7 +18,7 @@ body {
   margin: 0;
   height: 100vh;
   font-family: 'Roboto', sans-serif;
-  background: white;
+  background: #fffff1;
 }
 
 .hidden {
@@ -50,27 +50,21 @@ button:focus {
 }
 
 #grid td div {
-  height: 93%;
-  width: 93%;
-  margin: auto;
-  box-shadow: 0px 0px 8px 2px rgba(0,0,0,0.15);
+  height: 100%;
+  width: 100%;
   transition: background-color 0.5s ease, box-shadow 0.5s ease;
 }
 
-#grid tr:nth-child(2) td:nth-child(1) div {
-  border-top-left-radius: 50%;
+.tile-left {
+  border-right: 1px solid #111!important;
 }
 
-#grid tr:nth-child(2) td:nth-child(1) div {
-  border-bottom-left-radius: 50%;
+.tile-right {
+  border-left: 1px solid #111!important;
 }
 
-#grid tr:nth-child(2) td:nth-child(3) div {
-  border-top-right-radius: 50%;
-}
-
-#grid tr:nth-child(2) td:nth-child(3) div {
-  border-bottom-right-radius: 50%;
+.tile-left.on, .tile-right.on {
+  box-shadow: 0 0 0 3px rgba(0, 0, 0, .15)!important;
 }
 
 .tile {
@@ -82,19 +76,21 @@ button:focus {
 }
 
 .center-tile {
-  box-shadow: none!important;
+  margin-left: -50%!important;
+  border: 0!important;
 }
 
 #N-level {
   color: rgba(0, 0, 0, 0.5);
 }
 
-#eye-btn,
+#eye-left-btn,
+#eye-right-btn,
 #ear-left-btn,
 #ear-right-btn {
   text-align: center;
   background: rgba(0, 0, 0, 0.5);
-  color: white;
+  color: #fffff1;
   position: absolute;
 }
 
@@ -102,7 +98,7 @@ button:focus {
   overflow: hidden;
   min-width: 100vw;
   min-height: 100vh;
-  background: white;
+  background: #fffff1;
   position: relative;
   top: 0;
   bottom: 100%;
@@ -152,7 +148,7 @@ label[for="nav-trigger"] {
   border-style: none;
   position: absolute;
   background: rgba(0, 0, 0, 0.5);
-  color: white;
+  color: #fffff1;
   z-index: 10;
   border-radius: 4px;
 }
@@ -167,8 +163,8 @@ label[for="nav-trigger"] {
   padding: 0;
   border: 0;
   background: rgba(255, 255, 255, 0.5);
-  color: white;
-  text-shadow: 0px 0px 5px white;
+  color: #fffff1;
+  text-shadow: 0px 0px 5px #fffff1;
   border-radius: 50%;
 }
 
@@ -188,7 +184,7 @@ input[type=range].slider:focus {
 input[type=range].slider::-webkit-slider-runnable-track {
   width: 100%;
   cursor: pointer;
-  background: white;
+  background: #fffff1;
   border-radius: 4px;
   border: 0px solid #010101;
 }
@@ -208,7 +204,7 @@ input[type=range].slider:focus::-webkit-slider-runnable-track {
 .popup {
   position: absolute;
   z-index: 20;
-  color: white;
+  color: #fffff1;
   top: 0;
   left: 0;
   text-align: center;
@@ -249,12 +245,12 @@ input[type=range].slider:focus::-webkit-slider-runnable-track {
 }
 
 .ct-grid {
-  stroke: white;
+  stroke: #fffff1;
 }
 
 .ct-label {
-  fill: white;
-  color: white;
+  fill: #fffff1;
+  color: #fffff1;
 }
 
 .ct-series-a .ct-line,
@@ -272,45 +268,92 @@ input[type=range].slider:focus::-webkit-slider-runnable-track {
   stroke: red;
 }
 
-.on {
-  /* background: #F16C20!important; */
-  box-shadow: 0px 0px 16px 8px rgba(0,0,0,0.15)!important;;
+.on-emotion-0,
+.on-emotion-1,
+.on-emotion-2,
+.on-emotion-3,
+.on-emotion-4,
+.on-emotion-5,
+.on-emotion-6,
+.on-emotion-7 {
+ background-size: 17em;
+ background-position: 50%;
+ background-repeat: no-repeat;
 }
 
-.on-1 {
-  background: #e6194B!important;
+.on-emotion-0 {
+  background-image: url("../img/emotions/terrified.png");
 }
 
-.on-2 {
-  background: #f58231!important;
+.on-emotion-1 {
+  background-image: url("../img/emotions/annoyed.png");
 }
 
-.on-3 {
-  background: #bfef45!important;
+.on-emotion-2 {
+  background-image: url("../img/emotions/crying.png");
 }
 
-.on-4 {
-  background: #3cb44b!important;
+.on-emotion-3 {
+  background-image: url("../img/emotions/happy.png");
 }
 
-.on-5 {
-  background: #42d4f4!important;
+.on-emotion-4 {
+  background-image: url("../img/emotions/laughing.png");
 }
 
-.on-6 {
-  background: #4363d8!important;
+.on-emotion-5 {
+  background-image: url("../img/emotions/mad.png");
 }
 
-.on-7 {
-  background: #911eb4!important;
+.on-emotion-6 {
+  background-image: url("../img/emotions/sad.png");
 }
 
-.on-8 {
-  background: #f032e6!important;
+.on-emotion-7 {
+  background-image: url("../img/emotions/surprised.png");
 }
 
-.on-99 {
-  background-color: #000!important;
+.on-letter-0::after,
+.on-letter-1::after,
+.on-letter-2::after,
+.on-letter-3::after,
+.on-letter-4::after,
+.on-letter-5::after,
+.on-letter-6::after,
+.on-letter-7::after {
+  font-size: 16em;
+}
+
+.on-letter-0::after {
+  content: "A";
+}
+
+.on-letter-1::after {
+  content: "Q";
+}
+
+.on-letter-2::after {
+  content: "W";
+}
+
+.on-letter-3::after {
+  content: "E";
+}
+
+.on-letter-4::after {
+  content: "R";
+}
+
+.on-letter-5::after {
+  content: "T";
+}
+
+.on-letter-6::after {
+  content: "S";
+}
+
+.on-letter-7::after {
+  content: "U";
 }
 
 .right {
