--- a/v2/css/landscape.css
+++ b/v2/css/landscape.css
@@ -23,32 +23,28 @@
   left: 4vh;
 }
 
-#eye-btn {
-  font-size: 7vh;  
-  width: 10vw;
-  height: 50vh;
-  line-height: 50vh;
-  top: 50%;
-  transform: translateY(-50%);
-}
-
 #ear-left-btn,
-#ear-right-btn {
+#ear-right-btn,
+#eye-left-btn,
+#eye-right-btn {
   font-size: 7vh;
   width: 10vw;
   height: 24.5vh;
   line-height: 24.5vh;
 }
 
-#ear-left-btn {
+#ear-left-btn,
+#eye-left-btn {
   top: 25%;
 }
 
-#ear-right-btn {
+#ear-right-btn,
+#eye-right-btn {
   top: 50%;
 }
 
-#eye-btn {
+#eye-left-btn,
+#eye-right-btn {
   left: 0;
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px;
@@ -61,8 +57,12 @@
   border-bottom-left-radius: 4px;
 }
 
-#eye-btn:before {
+#eye-left-btn:before {
   content: "A";
+}
+
+#eye-right-btn:before {
+  content: "S";
 }
 
 #ear-left-btn:before {
@@ -79,7 +79,7 @@
 
 .results-icons td,
 .results-text {
-  color: white;
+  color: #fffff1;
   font-size: 8vh;
   padding: 2vh;
 }
@@ -144,7 +144,7 @@ label[for="nav-trigger"] {
 .nav-item p,
 .nav-item span.range-label {
   width: 55vh;
-  color: white;
+  color: #fffff1;
   font-size: 5vh;
   font-weight: 700;
 }
