--- a/Dual_N-back/css/common.css
+++ b/Dual_N-back/css/common.css
@@ -50,6 +50,7 @@ button:focus {
 }
 
 #grid td div {
+  background-color: #bbb;
   height: 93%;
   width: 93%;
   margin: auto;
@@ -82,6 +83,7 @@ button:focus {
 }
 
 .center-tile {
+  background-color: #0000!important;
   box-shadow: none!important;
 }
 
@@ -101,7 +103,7 @@ button:focus {
   overflow: hidden;
   min-width: 100vw;
   min-height: 100vh;
-  background: white;
+  background: #fffff0;
   position: relative;
   top: 0;
   bottom: 100%;
