--- a/Audio_N-back/css/landscape.css
+++ b/Audio_N-back/css/landscape.css
@@ -32,14 +32,14 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  padding: 17vh clamp(222px, 17vw, 444px);
+  padding: 17vh clamp(100px, 10vw, 300px);
   border-radius: 1rem 1rem 3rem 3rem;
   box-shadow: inset 0 -1rem 1rem 3rem #fff6,
                     0 1rem 1rem 0.1rem #0003;
 }
 
 #confirm-btn:before {
-  content: "Spacebar";
+  content: "Spacebar to Match";
 }
 
 #progress-outer {
