--- a/Audio_N-back/css/landscape.css
+++ b/Audio_N-back/css/landscape.css
@@ -28,14 +28,13 @@
 }
 
 #confirm-btn {
+  display: grid;
+  place-items: center;
   font-size: 7vh;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  padding: 17vh clamp(100px, 10vw, 300px);
-  border-radius: 1rem 1rem 3rem 3rem;
-  box-shadow: inset 0 -1rem 1rem 3rem #fff6,
-                    0 1rem 1rem 0.1rem #0003;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
 }
 
 #confirm-btn:before {
@@ -58,9 +57,10 @@
 }
 
 .btn-standard {
-  font-size: 7vh;
-  padding: 1vh 3vh;
   cursor: pointer;
+  font-size: 7vh;
+  min-width: 200px;
+  padding: 1vh 3vh;
 }
 
 .btn-popup {
@@ -78,7 +78,7 @@
 .btn-popup.reflected {
   top: 6vh;
   left: 50%;
-  transform: translateX(9vh);
+  transform: translateX(10vh);
 }
 
 #navigation {
