--- a/Audio_N-back/css/common.css
+++ b/Audio_N-back/css/common.css
@@ -30,6 +30,23 @@ button:focus {
   outline: 0!important;
 }
 
+.progress {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 8px;
+  z-index: 10;
+  background: #f0f0f0;
+  box-shadow: inset 0 -2px 4px 0 #0001;
+}
+
+.progress__bar {
+  background: #888;
+  width: 0%;
+  height: 100%;
+}
+
 #status-bar * {
   color: rgba(0, 0, 0, 0.5);
 }
